fix: fix gap

--- a/ng-ueqt/src/styles/flex/index.scss
+++ b/ng-ueqt/src/styles/flex/index.scss
@@ -11,7 +11,7 @@
         min-height: 1px;
         max-height: 100%;
     }
-    .u-flex-has-children>* {
+    .u-flex-has-gap-children>* {
         box-sizing: border-box;
         width: 100%;
         height: 100%;
